--- a/app/src/main/res/layout/activity_week_content.xml
+++ b/app/src/main/res/layout/activity_week_content.xml
@@ -247,8 +247,8 @@
                     android:background="@color/grey"
                     android:dividerHeight="10dp"
                     android:visibility="gone"
-
-                    android:divider="@color/grey">
+                    android:divider="@color/grey"
+                    android:layout_marginBottom="50dp">
                 </ListView>
             </LinearLayout>
     </LinearLayout>
